# bedrock-rs

./: .gitignore  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml
crates/addon/: Cargo.toml
crates/addon/src/: manifest.rs  version.rs
crates/addon/src/behavior/: mod.rs
crates/addon/src/behavior/entities/: mod.rs
crates/addon/src/behavior/entities/description/: mod.rs  properties.rs  scripts.rs
crates/addon/src/language/: code.rs  mod.rs
crates/addon/src/resource/: mod.rs
crates/core/: Cargo.toml
crates/form/: Cargo.toml
crates/level/: Cargo.toml
crates/level/src/level/: chunk.rs  chunk_cache.rs  file_interface.rs  level.rs  sub_chunk.rs
crates/level/src/level/db_interface/: bedrock_key.rs  rusty.rs
crates/level/src/types/: miner.rs  mod.rs
crates/level/test_level/db/: 000010.ldb  000013.ldb  LOG  LOG.old  MANIFEST-000007
crates/level/tests/: api_test.rs
crates/macros/src/: de.rs  lib.rs
crates/proto/: Cargo.toml
crates/proto/src/: codec.rs  error.rs  lib.rs  listener.rs
crates/proto/src/connection/: mod.rs
crates/proto/src/connection/shard/: task.rs
crates/proto/src/transport/: connection.rs  listener.rs
crates/proto/src/transport_layer/: listener.rs
crates/proto/src/version/: mod.rs
crates/proto/src/version/v662/: gamepackets.rs  helper.rs  mod.rs
crates/proto/src/version/v662/enums/: abilities_index.rs  actor_block_sync_message_id.rs  actor_flags.rs  actor_type.rs  build_platform.rs  container_enum_name.rs  container_type.rs  crafting_data_entry_type.rs  data_item_type.rs  item_use_method.rs  lesson_action.rs  new_interaction_model.rs  objective_sort_order.rs  player_list_packet_type.rs  player_permission_level.rs  prediction_type.rs  server_auth_movement_mode.rs
crates/proto/src/version/v662/nbt/: item_component_data.rs  mod.rs
crates/proto/src/version/v662/packets/: add_actor.rs  add_item_actor.rs  add_painting.rs  add_player.rs  animate_entity.rs  available_commands.rs  block_event.rs  book_edit.rs  boss_event.rs  change_dimension.rs  client_bound_debug_renderer.rs  client_bound_map_item_data.rs  client_cache_miss_response.rs  clientbound_debug_renderer.rs  command_block_update.rs  command_output.rs  correct_player_move_prediction.rs  creative_content.rs  death_info.rs  disconnect.rs  emote_list.rs  feature_registry.rs  hurt_armor.rs  inventory_content.rs  item_component.rs  item_stack_response.rs  legacy_telemetry_event.rs  level_chunk.rs  level_event.rs  level_sound_event.rs  level_sound_event_v1.rs  level_sound_event_v2.rs  map_info_request.rs  mod.rs  modal_form_response.rs  motion_prediction_hints.rs  move_actor_absolute.rs  move_player.rs  network_chunk_publisher_update.rs  play_status.rs  (+21 more)
crates/proto/src/version/v662/types/: actor_link.rs  actor_unique_id.rs  base_description.rs  base_game_version.rs  camera_instruction.rs  camera_preset.rs  camera_presets.rs  command_origin_data.rs  crafting_data_entry.rs  dimension_definition_group.rs  entity_net_id.rs  experiments.rs  game_rules_changed_packet_data.rs  inventory_action.rs  item_enchants.rs  item_instance_user_data.rs  item_stack_request_slot_info.rs  item_stack_response_container_info.rs  item_stack_response_info.rs  map_decoration.rs  material_reducer_data_entry.rs  mod.rs  move_actor_absolute_data.rs  network_item_instance_descriptor.rs  network_item_stack_descriptor.rs  shaped_recipe.rs  (+5 more)
crates/proto/src/version/v671/: gamepackets.rs  helper.rs  info.rs  mod.rs
crates/proto/src/version/v748/: gamepackets.rs  helper.rs  info.rs  mod.rs
crates/proto/src/version/v766/: gamepackets.rs  helper.rs  info.rs  mod.rs
crates/proto_core/: Cargo.toml
crates/proto_core/src/: error.rs  lib.rs
crates/proto_core/src/types/: vec.rs
crates/server/: Cargo.toml
crates/server/src/: error.rs  lib.rs
crates/server/src/ecs/components/: connected.rs  mod.rs
crates/server/src/ecs/systems/: death.rs
crates/server/src/login/: handler.rs  mod.rs
crates/server/src/server/: builder.rs  mod.rs
crates/shared/: Cargo.toml
crates/shared/src/world/: dimension.rs
crates/world/src/level_dat/: level_dat.rs
crates/world/src/world_db/: world_db.rs
examples/: proto_parsing.rs
examples/common/: logger.rs
examples/proto/: server.rs
src/: lib.rs
(+142 files in other folders)
