[package]
name = "bedrockrs"
version = "0.1.0"
edition = "2021"

[workspace]
members = [ "crates/*" ]

[dependencies]
bedrockrs_core = { path = "crates/core" }
bedrockrs_shared = { path = "crates/shared" }

bedrockrs_proto = { path = "crates/proto", optional = true }
bedrockrs_proto_core = { path = "crates/proto_core", optional = true }
bedrockrs_macros = { path = "crates/macros", optional = true }

bedrockrs_addon = { path = "crates/addon", optional = true }

bedrockrs_form = { path = "crates/form" }

bedrockrs_world = { path = "crates/world", optional = true }
bedrockrs_paletted_storage = { path = "crates/paletted_storage", optional = true }

[dev-dependencies]
nbtx = { git = "https://github.com/bedrock-crustaceans/nbtx" }

tokio = { version = "1.*", features = ["full"] }

fern = { version = "0.7", features = ["colored"] }
log = "0.4"
chrono = "0.4"

[features]
full = ["addon", "proto", "world"]

addon = ["dep:bedrockrs_addon"]
proto = ["dep:bedrockrs_proto", "dep:bedrockrs_proto_core", "dep:bedrockrs_macros"]
world = ["dep:bedrockrs_world", "dep:bedrockrs_paletted_storage"]

[[example]]
name = "proto_server"
path = "examples/proto/server.rs"
required-features = ["proto"]

[[example]]
name = "proto_parsing"
path = "examples/proto_parsing.rs"
required-features = ["proto"]

