[package]
name = "bedrockrs"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["crates/*"]

[dependencies]
bedrockrs_core = { path = "crates/core" }
bedrockrs_shared = { path = "crates/shared" }

bedrockrs_macros = { path = "crates/macros", optional = true }

bedrockrs_addon = { path = "crates/addon", optional = true }

bedrockrs_form = { path = "crates/form", optional = true }

bedrockrs_proto = { path = "crates/proto", optional = true }
bedrockrs_proto_core = { path = "crates/proto_core", optional = true }

bedrockrs_server = { path = "crates/server", optional = true }

[dev-dependencies]
tokio = { version = "1.40", features = ["full"] }

nbtx = { git = "https://github.com/bedrock-crustaceans/nbtx" }
uuid = { version = "1.11.0", features = ["v4"] }


fern = { version = "0.7", features = ["colored"] }
log = "0.4"
chrono = "0.4"

[features]

addon = ["dep:bedrockrs_addon"]
proto = ["dep:bedrockrs_proto","dep:bedrockrs_proto_core","dep:bedrockrs_macros",]
level = ["dep:bedrockrs_level"]
full = ["addon", "level", "proto", "server"]
form = ["dep:bedrockrs_form"]
server = ["dep:bedrockrs_server", "proto", "level", "form"]

[[example]]
name = "proto_server"
path = "examples/proto/server.rs"
required-features = ["proto"]

[[example]]
name = "proto_parsing"
path = "examples/proto_parsing.rs"
required-features = ["proto"]
